--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,18 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-color: #f2f2f2;
+  display:flex;
+  flex-direction: column;
 }
+.form-container {
+color:green;
+margin: 1%;
 
+
+}
+input{
+  margin: 2%;
+}
 .movie-card {
   background-color: #fff;
   border: 0;
@@ -67,6 +77,10 @@ body {
 }
 
 .home-button {
+  padding: 5px 10px;
+  background-color: lightskyblue;
+}
+.add-button {
   padding: 5px 10px;
   background-color: lightskyblue;
 }
